--- a/lectures/lecture4_informal_sensitivity.qmd
+++ b/lectures/lecture4_informal_sensitivity.qmd
@@ -19,8 +19,6 @@ library(ggpubr)
 library(here)
 ```
 
-
-
 ## What we are learning so far {.scrollable}
 
 How to find the "right" tool for the job
@@ -35,7 +33,7 @@ How to find the "right" tool for the job
 
     -   some parameters impact model transfer function, other I/O formatting
 
-# Answer to visual check 
+# Answer to visual check
 
 # My code to find issue and clean data {.scrollable}
 
@@ -91,7 +89,7 @@ site1 <- solarpv(area = 0.1, solar = sierraczosolar)
 
 ## Playing with models {.scrollable}
 
-::: {.concept-box}
+::: concept-box
 We often build models to try different options
 
 **Model inputs**: solar radiation (daily direct and diffuse)
@@ -103,7 +101,7 @@ We often build models to try different options
 
 How would a lower efficiency impact mean power generated?
 
-*eff* – 0.6 instead of default 0.8  
+*eff* – 0.6 instead of default 0.8
 
 try it
 
@@ -126,11 +124,9 @@ site2$mean
 (0.6-0.8)/0.8 * 100
 ```
 
-
 ## Informal Sensitivity Analysis {.scrollable}
 
-What happens when we vary parameters?
-  * Not always obvious when transfer function is non-linear or multi-part
+What happens when we vary parameters? \* Not always obvious when transfer function is non-linear or multi-part
 
 **Informal** - just try varying parameters
 
@@ -208,13 +204,13 @@ head(site2)
 -   R often returns lists - but not so easy for organization
 
 -   ask yourself what you want to do with the data, then put in a structure that will make this easy
-  -  a data frame is often the best structure for graphing
+
+-   a data frame is often the best structure for graphing
 
 -   e.g two different data frames
 
     -   plot variation in mean annual electricity by *eff*
     -   plot variation in each year due to variation in *eff*
-   
 
 ```{r sen1b, eval=T}
 
@@ -260,9 +256,9 @@ ggplot(site2df, aes(year, elect, group = year)) +
 
 **Why?**
 
-- Summarizes parameter uncertainty  
-- Highlights interannual trends  
-- Easier comparison across years
+-   Summarizes parameter uncertainty\
+-   Highlights interannual trends\
+-   Easier comparison across years
 
 ## Plot {.scrollable}
 
